--- a/learning/prototype/word2vec_WMD/5_fasttext_model_online_learning.ipynb
+++ b/learning/prototype/word2vec_WMD/5_fasttext_model_online_learning.ipynb
@@ -2,16 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<gensim.models.word2vec.LineSentence at 0x11373d940>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from gensim.models.word2vec import LineSentence\n",
     "from gensim.models.fasttext import FastText\n",
     "\n",
     "sentences = LineSentence('./sentences.txt')\n",
+    "sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "model = FastText(sentences,\n",
     "                          sg=1,\n",
     "                          size=100,\n",
@@ -23,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -31,17 +53,19 @@
     {
      "data": {
       "text/plain": [
-       "[('いえらぶの担当者は誰。', 0.8798546195030212),\n",
-       " ('JICの担当者は誰。', 0.4443792998790741),\n",
-       " ('反社チェックの担当者は誰。', 0.29699596762657166),\n",
-       " ('らく賃の担当者は誰。\\\\r\\\\n', 0.28755122423171997),\n",
-       " ('顧客ウェブシステムの担当者は誰。', 0.27540120482444763),\n",
-       " ('eラーニング操作の担当者は誰。', 0.2607567310333252),\n",
-       " ('年賀状の担当者は誰。\\\\r\\\\n', 0.2558254301548004),\n",
-       " ('モバイル端末についての担当者は誰。\\\\r\\\\n', 0.15341590344905853)]"
+       "[('いえらぶ', 0.7063073515892029),\n",
+       " ('JIC', 0.07901138067245483),\n",
+       " ('顧客ウェブシステム', 0.07357047498226166),\n",
+       " ('反社チェック', 0.06922847032546997),\n",
+       " ('担当者', -0.0070856548845767975),\n",
+       " ('モバイル端末について', -0.042527273297309875),\n",
+       " ('らく賃', -0.06280609220266342),\n",
+       " ('年賀状', -0.07591518759727478),\n",
+       " ('eラーニング操作', -0.12737172842025757),\n",
+       " ('誰', -0.20055866241455078)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,6 +73,151 @@
    "source": [
     "model.wv.most_similar(['いえらぶの担当者は誰'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -3.79611203e-03,   8.55726132e-04,  -1.04931789e-03,\n",
+       "        -4.85368160e-04,  -3.86626896e-04,  -1.30123968e-04,\n",
+       "         2.67355028e-03,  -1.10640924e-03,  -2.05720519e-03,\n",
+       "        -1.31576206e-03,  -1.07162155e-03,  -8.66653805e-04,\n",
+       "         4.90815029e-04,   3.89318826e-04,   5.54892584e-04,\n",
+       "        -1.55390834e-03,   8.91111617e-04,  -1.06331625e-03,\n",
+       "        -2.71554687e-03,   2.85410741e-03,   5.19416390e-05,\n",
+       "        -2.16092230e-05,   3.83999408e-03,   1.24980346e-03,\n",
+       "        -3.85008659e-03,  -1.85639458e-03,  -2.49625905e-03,\n",
+       "        -1.79684826e-03,   4.11614589e-03,  -7.62561394e-04,\n",
+       "         1.73432950e-03,  -2.91721011e-03,  -3.60199600e-04,\n",
+       "        -8.09923164e-04,   4.73448832e-04,   2.34742975e-03,\n",
+       "        -1.85714732e-03,   3.94019735e-05,  -6.06150425e-04,\n",
+       "        -2.25228537e-03,  -3.88040091e-04,   1.41150272e-03,\n",
+       "        -2.04823026e-03,   8.04974115e-04,   5.88697323e-04,\n",
+       "        -2.01005590e-04,  -2.66760151e-04,   1.57233188e-03,\n",
+       "         5.24158706e-04,  -2.65027420e-03,   1.64915214e-03,\n",
+       "        -2.13965448e-03,   1.27182109e-03,  -2.04746611e-03,\n",
+       "         1.85482844e-03,  -9.86460072e-05,   6.25968678e-04,\n",
+       "         1.45003875e-03,   1.18275588e-04,  -1.04941789e-03,\n",
+       "        -3.39184795e-03,  -3.40523338e-03,  -2.69325916e-03,\n",
+       "        -2.95729586e-03,  -1.61200576e-03,   2.46828143e-03,\n",
+       "         1.42707831e-05,   2.86990427e-03,   1.58428331e-03,\n",
+       "        -2.44256295e-03,  -8.71332595e-04,   4.66886559e-04,\n",
+       "         6.96759031e-04,   1.34168705e-03,  -2.54941080e-03,\n",
+       "        -2.40690517e-03,   6.57709024e-04,  -3.17892199e-03,\n",
+       "        -7.89181911e-04,  -4.56539827e-04,   1.63525075e-03,\n",
+       "        -2.49865954e-03,  -2.02756841e-03,   1.61971373e-03,\n",
+       "        -1.61823269e-03,   3.35180048e-05,   2.06980808e-03,\n",
+       "         2.23109382e-03,   8.44531769e-06,   5.76337392e-04,\n",
+       "        -3.11838300e-03,   3.28726601e-04,   1.72671047e-03,\n",
+       "        -1.72869791e-03,  -4.90510894e-04,   5.02922449e-05,\n",
+       "        -2.13493966e-03,   1.11711537e-03,  -1.05842412e-03,\n",
+       "        -2.95159454e-03], dtype=float32)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv['いえらぶ']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "vocab = LineSentence('./vocab.txt')\n",
+    "model.build_vocab(vocab, update=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  4.97036800e-03   1.79228769e-03   3.93120013e-03   1.85306452e-03\n",
+      "  -1.63989724e-03  -1.96724315e-03  -4.52391990e-03   2.06842506e-03\n",
+      "  -4.99618996e-04   4.20872634e-03   4.44605947e-03  -3.52113717e-03\n",
+      "  -4.14297637e-03  -1.51521026e-03  -4.67762724e-03  -4.63007204e-03\n",
+      "   2.64277245e-04  -1.40058016e-03   4.81583225e-03  -4.68706293e-03\n",
+      "   4.85994574e-03  -2.41853530e-03   3.96806980e-03   1.51829957e-03\n",
+      "  -1.14234642e-03  -1.83400162e-03   3.35968356e-03  -5.22086513e-04\n",
+      "  -5.72008081e-04  -9.22539562e-04   4.18570079e-03  -4.22329502e-03\n",
+      "   9.78190801e-04  -3.61398980e-03  -3.71512119e-03  -2.40642927e-03\n",
+      "  -2.26819026e-03   4.60515468e-04   1.59463647e-03   1.02662598e-03\n",
+      "   2.81785708e-03  -3.11643397e-03   3.47292796e-03  -1.31158601e-03\n",
+      "  -2.58368440e-03  -4.63395426e-03   4.76424303e-03   4.17198706e-03\n",
+      "   1.55370108e-05   2.35382048e-03   5.06492332e-04  -3.94050358e-03\n",
+      "  -4.33503930e-03   4.35409835e-03   3.90782254e-03   4.47810441e-03\n",
+      "  -2.29633437e-03  -3.25122452e-03  -2.80154147e-03  -1.59583683e-03\n",
+      "   4.68664197e-03   3.25732213e-03  -2.79975822e-03  -4.61116945e-03\n",
+      "   2.99261487e-03  -4.94062714e-03  -6.41572580e-04  -4.60152887e-03\n",
+      "   4.45201993e-03  -2.52876169e-04  -2.61496799e-03   1.72545668e-03\n",
+      "   4.16966015e-03   1.31258043e-03   1.90065685e-03   2.85721081e-03\n",
+      "   1.29728077e-03   3.18513787e-03   2.39518951e-04  -7.33796973e-04\n",
+      "  -4.53215762e-04   3.22487508e-03   1.65041478e-03  -5.25166746e-04\n",
+      "  -4.86850273e-04   1.76714035e-03  -9.51408118e-04  -3.02048167e-03\n",
+      "   1.82188326e-03  -6.71466114e-05  -1.57859107e-03   4.41524480e-03\n",
+      "   4.98381350e-03  -1.72164908e-03  -1.45124365e-03  -2.98821041e-03\n",
+      "  -3.30651383e-04  -3.08503374e-03   4.64485114e-04   4.43677371e-03]\n",
+      "[ -3.79611203e-03   8.55726132e-04  -1.04931789e-03  -4.85368160e-04\n",
+      "  -3.86626896e-04  -1.30123968e-04   2.67355028e-03  -1.10640924e-03\n",
+      "  -2.05720519e-03  -1.31576206e-03  -1.07162155e-03  -8.66653805e-04\n",
+      "   4.90815029e-04   3.89318826e-04   5.54892584e-04  -1.55390834e-03\n",
+      "   8.91111617e-04  -1.06331625e-03  -2.71554687e-03   2.85410741e-03\n",
+      "   5.19416390e-05  -2.16092230e-05   3.83999408e-03   1.24980346e-03\n",
+      "  -3.85008659e-03  -1.85639458e-03  -2.49625905e-03  -1.79684826e-03\n",
+      "   4.11614589e-03  -7.62561394e-04   1.73432950e-03  -2.91721011e-03\n",
+      "  -3.60199600e-04  -8.09923164e-04   4.73448832e-04   2.34742975e-03\n",
+      "  -1.85714732e-03   3.94019735e-05  -6.06150425e-04  -2.25228537e-03\n",
+      "  -3.88040091e-04   1.41150272e-03  -2.04823026e-03   8.04974115e-04\n",
+      "   5.88697323e-04  -2.01005590e-04  -2.66760151e-04   1.57233188e-03\n",
+      "   5.24158706e-04  -2.65027420e-03   1.64915214e-03  -2.13965448e-03\n",
+      "   1.27182109e-03  -2.04746611e-03   1.85482844e-03  -9.86460072e-05\n",
+      "   6.25968678e-04   1.45003875e-03   1.18275588e-04  -1.04941789e-03\n",
+      "  -3.39184795e-03  -3.40523338e-03  -2.69325916e-03  -2.95729586e-03\n",
+      "  -1.61200576e-03   2.46828143e-03   1.42707831e-05   2.86990427e-03\n",
+      "   1.58428331e-03  -2.44256295e-03  -8.71332595e-04   4.66886559e-04\n",
+      "   6.96759031e-04   1.34168705e-03  -2.54941080e-03  -2.40690517e-03\n",
+      "   6.57709024e-04  -3.17892199e-03  -7.89181911e-04  -4.56539827e-04\n",
+      "   1.63525075e-03  -2.49865954e-03  -2.02756841e-03   1.61971373e-03\n",
+      "  -1.61823269e-03   3.35180048e-05   2.06980808e-03   2.23109382e-03\n",
+      "   8.44531769e-06   5.76337392e-04  -3.11838300e-03   3.28726601e-04\n",
+      "   1.72671047e-03  -1.72869791e-03  -4.90510894e-04   5.02922449e-05\n",
+      "  -2.13493966e-03   1.11711537e-03  -1.05842412e-03  -2.95159454e-03]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.wv['営業'])\n",
+    "print(model.wv['いえらぶ'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -56,6 +225,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
